[tool.poetry]
name = "timeblockist"
version = "0.1.0"
description = ""
authors = ["Margo <slava1kvartovkin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1"
todoist-api-python = "^1.1.0"
attrs = "^21.4.0"
starlette = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
